From 1638739 (cp-fixes):
=======================

In prisim/delay_spectrum.py,

(*) In member function compute_averaged_closure_phase_power_spectrum()
of class DelayPowerSpectrum, check for presence of keys in dictionary,
shapes of various quantities, and the math of cross-power spectrum
(*) Fix math in subband_delay_transform_closure_phase() of class
DelayPowerSpectrum

From 4838e42 (cp-fixes):
=======================

In prisim/delay_spectrum.py,

(*) Update member function subband_delay_transform_closure_phase() in
class DelaySpectrum to handle any dimension for closure phase inputs.
Update member function docstring accordingly

From 4bef2c2 (closure):
======================

In prisim/delay_spectrum.py,

(*) Change use of axis keyword throughout member function
subband_delay_transform_closure_phase() of class DelaySpectrum

From 99a8c08 (closure):
======================

In prisim/delay_spectrum.py,

(*) Rename member function compute_closure_phase_power_spectrum()
of class DelayPowerSpectrum to
compute_individual_closure_phase_power_spectrum(). Update docstring
of class and member function accordingly

(*) Add member function
compute_averaged_closure_phase_power_spectrum() to class
DelayPowerSpectrum. Update class docstring accordingly

From 5f9ea23 (closure):
======================

In prisim/delay_spectrum.py,

(*) Check for presence of keys in input closure_phase_delay_spectra
in member function compute_closure_phase_power_spectrum() of class
DelayPowerSpectrum. Update docstring accordingly

From 6aecec0 (closure):
======================

In prisim/interferometry.py,

(*) Update docstring of member function getClosurePhase() of class
InterferometerArray to include description of value under key
'noiseRMS' in input specsmooth_info

In prisim/delay_spectrum.py,

(*) Update docstring of member function
subband_delay_transform_closure_phase() of class DelaySpectrum to
include description of value under key 'noiseRMS' in input
specsmooth_info
